[package]
name = "decrunch-unity"
version = "0.1.2"
authors = ["Istvan Fehervari <gooksl@gmail.com>"]
description = "Decoder for crunch-compressed texture data, using the Unity fork of the crunch library."
license = "MIT"
build = "build.rs"
repository = "https://github.com/ifeherva/decrunch"
homepage = "https://github.com/ifeherva/decrunch"
keywords = ["crunch", "dxt", "image-processing", "texture"]
travis-ci = { repository = "https://github.com/ifeherva/decrunch", branch = "master" }

[build-dependencies]
cc = "1.2.22"

[dependencies]
libc = ">=0.2.26"
